# cc-webapp-flask

./: CHANGELOG.md  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_directory}}/: .gitignore  CHANGELOG.md  CODEOWNERS  Dockerfile  README.md  docker-compose.yml  docker_build.sh  entrypoint.sh  pyproject.toml
{{cookiecutter.project_directory}}/tests/: test_class_config.py
{{cookiecutter.project_directory}}/{{cookiecutter.project_slug}}/: __init__.py  config.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_directory}}/{{cookiecutter.project_slug}}/home/: views.py
{{cookiecutter.project_directory}}/{{cookiecutter.project_slug}}/templates/: about.html  auth_error.html  base.html  index.html  login.html  print_this.html
