[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author }}"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
aaron-common-libs = {git = "https://github.com/aaronmelton/aaron-common-libs.git"}

[tool.poetry.dev-dependencies]
bandit = "^1.7.8"
black = "^24.4.2"
coverage = "^7.6.0"
flake8 = "^7.1.0"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
pylint = "^3.2.6"
pytest = "^8.3.1"
pytest-env = "^1.1.3"
toml = "^0.10.2"
Flake8-pyproject = "^1.2.3"
Flask = "^3.0.3"
Flask-Session = "^0.8.0"
identity = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = ["B108"]
exclude_dirs = ["./tests/"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
        /(
          \.git
        | \.tox
        | \.venv
        | env/
        | _build
        | build
        | dist
        )/
    '''

[tool.flake8]
ignore = ['E501', 'W503']

[tool.isort]
profile = "black"

[tool.pydocstyle]
convention = '''google'''
inherit = false
match = '''(?!__init__).*\.py'''
match-dir = '''(?!tests)[^\.].*'''

[tool.pylint.master]
init-hook = 'import os, sys; sys.path.append(os.path.dirname("{{ cookiecutter.project_slug }}/"));'

[tool.pylint.messages_control]
disable = '''
    line-too-long,
    singleton-comparison,
    too-many-lines,
    use-implicit-booleaness-not-comparison
    '''

[tool.pylint.miscellaneous]
notes = ''',
    TODO.md,
    '''

[tool.pytest.ini_options]
pythonpath = [".", "{{ cookiecutter.project_slug }}/"]
env = ["LOG_LEVEL = DEBUG",
    "LOG_PATH = /tmp/",
    "API_KEY = test-s3cr3tk3y"]
